# Portfolio-Simulator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: supabase-keepalive.yml
.streamlit/: secrets.toml.example
docs/: architecture.md  deployment-guide.md
src/portfolio_simulator/: __init__.py  config.py
src/portfolio_simulator/analytics/: comparison.py  costs.py  efficient_frontier.py  monte_carlo.py  ratios.py  returns.py  risk.py
src/portfolio_simulator/cache/: base.py  memory_cache.py  sqlite_cache.py
src/portfolio_simulator/domain/: asset.py  enums.py  portfolio.py  results.py  simulation.py
src/portfolio_simulator/providers/: base.py  csv_provider.py  registry.py  yahoo.py
src/portfolio_simulator/services/: __init__.py  backtest_engine.py  currency_service.py  data_service.py  pg_portfolio_store.py  portfolio_store.py
src/portfolio_simulator/ui/: app.py  auth.py
src/portfolio_simulator/ui/components/: asset_picker.py  data_export.py  metric_cards.py  provider_selector.py  weight_editor.py
src/portfolio_simulator/ui/pages/: backtest.py  comparison.py  optimizer.py
src/portfolio_simulator/ui/views/: backtest.py  (+3 more)
src/portfolio_simulator/utils/: currency.py  date_utils.py  validation.py
src/portfolio_simulator/visualization/: charts.py  tables.py  theme.py
tests/: conftest.py
tests/fixtures/example_portfolios/: global_60_40.json  sp500_only.json
tests/unit/: test_backtest_engine.py  test_cache.py  test_costs.py  test_domain.py  test_monte_carlo.py  test_ratios.py  test_returns.py  test_risk.py
