[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-simulator"
version = "0.1.0"
description = "Source-agnostic portfolio backtesting and analytics tool"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "plotly>=5.0",
    "yfinance>=0.2",
    "scipy>=1.11",
    "streamlit>=1.30",
    "pyarrow>=14.0",
    "exchange-calendars>=4.0",
    "streamlit-searchbox>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_simulator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that hit external APIs (deselect with '-m \"not slow\"')",
]
